Se actualiza ejemplo de configuración

--- a/config.ini.example
+++ b/config.ini.example
@@ -13,6 +13,7 @@ listado_mangas = [
             "url_base" : "https://url.manga/manga/nombre-manga/"
         }
     ]
-[LEIDOS]
-listado = ['manga1', 'manga2']
+
+[DB]
+ruta_db = mangadb.db
     
